1. Add Asynchronous configuration for handling asynchronous operations and create a thread task executor 2. Add PublisherService interface for handling messaging and queue operations. 3. Create a separate queue.properties file for queue names used in AWS Simple Queue Service (SQS) 4. Create Email Service for sending and delivering email messages to users. 5. Create HTML templates for used in email services for sign up verification, mfa setup and verification, forgot password and reset password. 6. Create SMS Service for sending SMS messages to phone numbers. 7. Configure SNS for sending SMS messages. 8. Configure AWS Simple Email Service (SES) for sending email messages. 9. Configure AWS SQS for queue and messaging operations. 10. Add SqsListener for listening to messages in the queue and consuming them. 11. Add Sqs Message Listener Container factory. 12. Add documentations for queue and application event publisher operations. 13. Refactor CacheCredentials to CacheProperties. 14. Create base class MessageRequest for use in request related event like sending sign up verification and mfa verification code and others. 15. Create constants and enums like Email fields to use in the email templates like first name, last name, verification code. 16. Refactor other DTO and request and response classes. 17. Move and refactor packages. 18. Add new dependencies to pom.xml 19. Add event publishers and handlers for profile related requests and operations and also stream creation or update. 20. Add Thymleaf Template Configuration and add Template engine resolver for use in TemplateProcessor for parsing and processing email templates with context variables before sending of email messages. 21. Update max value of phone number validation to 15 characters. 22. Add alt attribute to <img/> element in HTML elements.